--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,22 @@ cache/
 logs/
 output/
 
+*.iml
+*.iml
+*.xml
+*.xml
+*.xml
+*.xml
+*.xml
+*.xml
+*.jpg
+*.jpg
+*.jpg
+*.jpg
+*.csv
+*.xlsx
+*.npy
+*.npy
+*.txt
+*.h5
+*.npy
